[package]
name = "tpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.11.0", features = ["full", "io-std", "fs", "io-util"] }
tar = "0.4.40"
flate2 = "1.0.28"
reqwest = { version = "0.11.23", features = ["json", "stream", "blocking"] }
futures-util = "0.3.30"